# online_pong

./: CMakeLists.txt
include/: ball.h  game.h  game_client.h  paddle.h
src/: ball.cpp  game.cpp  game_client.cpp  main.cpp  paddle.cpp
